--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,12 @@ body,
 
 body {
   font-family: "Raleway", Arial, Tahoma, sans-serif;
-  font-size: 14px;
-  background-color: #f8f9f9;
-  color: #848484;
+  font-size: 12px;
+  background-color: #dedede;
   -webkit-font-smoothing: antialiased !important;
   overflow: hidden;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  line-height: 60px;
-}
+/* .hidden {
+  display: none;
+} */
