--- a/src/components/cards/card/styles.css
+++ b/src/components/cards/card/styles.css
@@ -1,12 +1,15 @@
 .card {
     height: 80px;
     width: 240px;
-    margin: 10px;
-    padding: 20px;
+    margin: 6px;
+    border-radius: 2px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .card:hover {
+    height: 88px;
+    width: 248px;
+    margin: 2px;
     opacity: 0.8;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
