--- a/src/components/cards/card/styles.css
+++ b/src/components/cards/card/styles.css
@@ -6,7 +6,7 @@
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
-.card:hover {
+.card-hover:hover {
     height: 88px;
     width: 248px;
     margin: 2px;
