--- a/src/pages/selecaoFilmes/styles.css
+++ b/src/pages/selecaoFilmes/styles.css
@@ -1,25 +1,17 @@
-.page-header{
-  height: 100px;
-  width: 100%;
-  background-color: dimgrey;
+.info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 50px;
 }
 
 .list{
   display: flex;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
-.info{
-  color: white;
-  font-size: 24px;
-}
-
-.button{
-  padding: 10px;
-  border: none;
-  color: white;
-  background-color: #383838;
-  text-transform: uppercase;
-  border-radius: 2px;
+.error{
+  color: red;
 }
