Melhorias no layout

--- a/src/components/cards/card/styles.css
+++ b/src/components/cards/card/styles.css
@@ -3,6 +3,7 @@
     width: 240px;
     margin: 6px;
     border-radius: 2px;
+    color: dimgrey;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
